# white-whale

./: .gitignore  pyproject.toml
config/: default.yaml
data/: README.md  labeled-wallets.csv
deploy/: README.md  whitewhale-enrich.service  whitewhale-health.service  whitewhale-ingest.service  whitewhale-refresh-stats.service  whitewhale-refresh-stats.timer
docs/: plan.md  research-notes.md
src/whitewhale/: __init__.py  alert.py  backtest.py  cli.py  config.py  db.py  filter.py  health.py  models.py  schema.sql  stats.py
src/whitewhale/ingest/: __init__.py  gamma.py  rtds.py  subgraph.py
src/whitewhale/scoring/: __init__.py  components.py  engine.py  inputs.py
tests/: conftest.py  test_alert.py  test_backtest.py  test_config_reload.py  test_health.py  test_rtds_persist.py  test_scoring_components.py  test_scoring_engine.py  test_stats.py  test_subgraph_map.py  test_whale_filter.py
tests/fixtures/: rtds_sample.jsonl
