[project]
name = "whitewhale"
version = "0.1.0"
description = "Self-hosted Polymarket whale alert system"
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "certifi>=2024.0.0",
]

[project.scripts]
whitewhale = "whitewhale.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whitewhale"]

[tool.hatch.build]
include = [
    "src/whitewhale/**/*.py",
    "src/whitewhale/schema.sql",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
